Sfera add 2 block

--- a/index.html
+++ b/index.html
@@ -8,18 +8,38 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="text">
-            <h1>Find Friends</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti porro consequuntur deserunt fugiat illo aperiam esse voluptatibus, voluptas nobis reprehenderit enim placeat earum facilis ratione suscipit maiores maxime ea quo!</p>
-            <div class="button">
-                <input type="submit" id="submit" class="submit-btn" value="FIND FRIENDS">
+    <div class="global-container">
+        <div class="container1">
+            <div class="text">
+                <h1>Find Friends</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti porro consequuntur deserunt fugiat illo aperiam esse voluptatibus, voluptas nobis reprehenderit enim placeat earum facilis ratione suscipit maiores maxime ea quo!</p>
+                <div class="button">
+                    <input type="submit" id="submit" class="submit-btn" value="FIND FRIENDS">
+                </div>
+            </div> 
+            <div class="photo">
+                <img src="css/friends3.jpg" alt="">
             </div>
-        </div> 
-        <div class="photo">
-            <img src="css/friends3.jpg" alt="">
+        </div>
+        <div class="container2">
+            <div class="block1">
+                <img src="css/icon-friends1.svg" alt="Иконка друзей">
+                <h2>Первый сервис имеющий</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium doloribus consequuntur delectus fugit perspiciatis, itaque nemo sint blanditiis quod similique nulla error mollitia possimus at sapiente assumenda cupiditate iste placeat?</p>
+            </div>
+            <div class="block2">
+                <img src="css/icon-friends2.svg" alt="Иконка друзей">
+                <h2>Первый сервис имеющий</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia inventore sunt expedita quasi quas enim hic. Quidem, ea est nesciunt aut unde et obcaecati tempora alias assumenda distinctio! Tempora, voluptatem.</p>
+            </div>
+            <div class="block3">
+                <img src="css/icon-friends3.svg" alt="Иконка друзей">
+                <h2>Первый сервис имеющий</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente ipsum cupiditate laudantium, voluptatibus deserunt officiis quibusdam cumque culpa id! Culpa nam magnam officiis provident ipsa. Iure quidem modi unde illum?</p>
+            </div>
         </div>
     </div>
+    
    
 </body>
 </html>
