Добавил блок с цифрами

--- a/index.html
+++ b/index.html
@@ -18,28 +18,45 @@
                 </div>
             </div> 
             <div class="photo">
-                <img src="css/friends3.jpg" alt="">
+                <img src="css/assets/friends3.jpg" alt="">
             </div>
         </div>
         <div class="container2">
             <div class="block1">
-                <img src="css/icon-friends1.svg" alt="Иконка друзей">
+                <img src="css/assets/icon-friends1.svg" alt="Иконка друзей">
                 <h2>Первый сервис имеющий</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium doloribus consequuntur delectus fugit perspiciatis, itaque nemo sint blanditiis quod similique nulla error mollitia possimus at sapiente assumenda cupiditate iste placeat?</p>
             </div>
             <div class="block2">
-                <img src="css/icon-friends2.svg" alt="Иконка друзей">
+                <img src="css/assets/icon-friends2.svg" alt="Иконка друзей">
                 <h2>Первый сервис имеющий</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia inventore sunt expedita quasi quas enim hic. Quidem, ea est nesciunt aut unde et obcaecati tempora alias assumenda distinctio! Tempora, voluptatem.</p>
             </div>
             <div class="block3">
-                <img src="css/icon-friends3.svg" alt="Иконка друзей">
+                <img src="css/assets/icon-friends3.svg" alt="Иконка друзей">
                 <h2>Первый сервис имеющий</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente ipsum cupiditate laudantium, voluptatibus deserunt officiis quibusdam cumque culpa id! Culpa nam magnam officiis provident ipsa. Iure quidem modi unde illum?</p>
             </div>
         </div>
+        <div class="container3">
+            <div class="number-section1">
+                <h1><ins>7</ins> приложений <br> уже работают</h1>
+                <img src="css/assets/work.svg">
+            </div>
+            <div class="number-section2">
+                <h1><ins>300 000</ins><br> скачиваний</h1>
+                <img src="css/assets/download.svg">
+            </div>
+            <div class="number-section3">
+                <h1><ins>4/5</ins> оценка <br> в Google Play</h1> 
+                <img src="css/assets/star.svg">
+                <img src="css/assets/star.svg">
+                <img src="css/assets/star.svg">
+                <img src="css/assets/star.svg">
+                <img src="css/assets/emp-star.svg">
+            </div>
+        </div>
     </div>
-    
    
 </body>
 </html>
