Сделал его более адаптивнее, провел рефакторинг и добавил секцию с отзывами

--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 <body>
     <div class="global-container">
         <div class="container1">
-            <div class="text">
-                <h1>Find Friends</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti porro consequuntur deserunt fugiat illo aperiam esse voluptatibus, voluptas nobis reprehenderit enim placeat earum facilis ratione suscipit maiores maxime ea quo!</p>
-                <div class="button">
-                    <input type="submit" id="submit" class="submit-btn" value="FIND FRIENDS">
+            <div class="content">
+                <div class="text">
+                    <h1>Find Friends</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti porro consequuntur deserunt fugiat illo aperiam esse voluptatibus, voluptas nobis reprehenderit enim placeat earum facilis ratione suscipit maiores maxime ea quo!</p>
+                    <div class="button">
+                        <input type="submit" id="submit" class="submit-btn" value="FIND FRIENDS">
+                    </div>
+                </div> 
+                <div class="photo-container">
+                    <img class="photo" src="css/assets/friends3.jpg" alt="Фото друзей">
                 </div>
-            </div> 
-            <div class="photo">
-                <img src="css/assets/friends3.jpg" alt="">
             </div>
         </div>
+     
         <div class="container2">
             <div class="block1">
                 <img src="css/assets/icon-friends1.svg" alt="Иконка друзей">
@@ -55,6 +58,32 @@
                 <img src="css/assets/star.svg">
                 <img src="css/assets/emp-star.svg">
             </div>
+        </div>
+        <div class="container4">
+            <div class="testimonials">
+                <div class="testimonial">
+                    <h1>Имя человека</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eos totam, recusandae repudiandae laboriosam assumenda sapiente labore quod debitis unde molestiae iusto pariatur non fugit accusamus, atque laudantium perspiciatis temporibus.</p>
+                    <div class="photo_person">
+                        <img src="css/assets/person.jpg" alt="фото человека">
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <h1>Имя человека</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque ducimus quaerat, optio quasi eveniet voluptatibus veniam debitis laudantium quidem harum! Quia nisi, optio amet iusto maiores inventore deleniti est necessitatibus?</p>
+                    <div class="photo_person">
+                        <img src="css/assets/person.jpg" alt="фото человека">
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <h1>Имя человека</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus, excepturi temporibus dolore facere quaerat corporis! Fugiat nulla dolorum eaque in doloribus officiis obcaecati qui exercitationem distinctio velit tenetur, non reiciendis!</p>
+                    <div class="photo_person">
+                        <img src="css/assets/person.jpg" alt="фото человека">
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
    
